--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="pt-br">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -8,42 +9,31 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Roboto+Condensed:ital,wght@0,300;1,700&display=swap" rel="stylesheet">
+    <script src="script.js" defer></script>
     <title>Você tem que aceitar</title>
 </head>
-<body class="background">
-    <div>
-        <p class="title">Prefiro Você</p>
-        <div class="divPhoto1">
-            <img class="imgFirts" src="img/imgFirts.jpg">
-        </div>
-        <div style="display: flex" >
-        <p class="text">
-            "Prefiro você, cê tem tudo
-            <br>
-            Parte mais genial do meu mundo
-            Pode parecer absurdo
-            Mas toda vez que eu te vejo, eu mudo"
-        </p>
-        </div>
-        <div class="divVideoFirts">
-            <video class="videoFirts" src="img/videoFirts.mp4" controls ></video>
-        </div>
-        <p class="request">Quer Namorar comigo?</p>
-        <label>
-            <input type="radio" name="reply" value="Sim">
-            Sim
-        </label>
-        <label class="yes">
-            <input  class="yesInput" type="radio" name="reply" value="SIM">
-            SIM GRANDE
-        </label>
-        <label class="no">
-            <input class="noInput" type="radio" name="reply" value="Não">
-            Não
-        </label>
 
+<body>
+    <div class="container">
+        <header>
+            <h1>Prefiro Você</h1>
+        </header>
 
-
+        <main>
+            <div class="divPhoto">
+                    <img class="imgFirts" src="img/imgFirts.jpg">  
+            </div>
+            <div class="divtext">
+                <p class="text">
+                    "Prefiro você, cê tem tudo
+                    Parte mais genial do meu mundo
+                    <br>
+                    Pode parecer absurdo
+                    Mas toda vez que eu te vejo, eu mudo"
+                </p>
+            </div>
+        </main>
     </div>
 </body>
+
 </html>
