--- a/index.html
+++ b/index.html
@@ -5,10 +5,11 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="./home.css">
+    <link rel="stylesheet" href="./style.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Roboto+Condensed:ital,wght@0,300;1,700&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Roboto+Condensed:ital,wght@0,300;1,700&display=swap"
+        rel="stylesheet">
     <script src="script.js" defer></script>
     <title>Você tem que aceitar</title>
 </head>
@@ -22,7 +23,7 @@
         <main>
             <div class="divPhoto">
                 <div id="slider">
-                    <img  class="selected" src="img/imgFirts.jpg" alt="Primeiro viagem para Cocho D´agua.">
+                    <img class="selected" src="img/imgFirts.jpg" alt="Primeiro viagem para Cocho D´agua.">
                     <img src="img/ImgThird.jpeg" alt="Foto do seu aniversario.">
                     <img src="img/ImgFourth.jpeg" alt="Nossa primeira fotos juntos.">
                 </div>
@@ -35,6 +36,22 @@
                     Pode parecer absurdo
                     Mas toda vez que eu te vejo, eu mudo"
                 </p>
+            </div>
+            <p class="request">Quer Namorar comigo?</p>
+            <label>
+                <input type="radio" name="reply" value="Sim">
+                Sim
+            </label>
+            <label class="yes">
+                <input class="yesInput" type="radio" name="reply" value="SIM">
+                SIM GRANDE
+            </label>
+            <label class="no">
+                <input class="noInput" type="radio" name="reply" value="Não">
+                Não
+            </label>
+            <div class="divVideoFirts">
+                <video class="videoFirts" src="img/videoFirts.mp4" controls autoplay muted></video>
             </div>
         </main>
     </div>
