--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
         <main>
             <div class="divPhoto">
                 <div id="slider">
-                    <img class="selected" src="img/imgFirts.jpg" alt="Primeiro viagem para Cocho D´agua.">
+                    <img class="selected" src="img/ImgFirts.jpg" alt="Primeiro viagem para Cocho D´agua.">
                     <img src="img/ImgThird.jpeg" alt="Foto do seu aniversario.">
                     <img src="img/ImgFourth.jpeg" alt="Nossa primeira fotos juntos.">
                 </div>
