--- a/index.html
+++ b/index.html
@@ -21,7 +21,11 @@
 
         <main>
             <div class="divPhoto">
-                    <img class="imgFirts" src="img/imgFirts.jpg">  
+                <div id="slider">
+                    <img  class="selected" src="img/imgFirts.jpg" alt="Primeiro viagem para Cocho D´agua.">
+                    <img src="img/ImgThird.jpeg" alt="Foto do seu aniversario.">
+                    <img src="img/ImgFourth.jpeg" alt="Nossa primeira fotos juntos.">
+                </div>
             </div>
             <div class="divtext">
                 <p class="text">
