--- a/index.html
+++ b/index.html
@@ -17,18 +17,18 @@
 <body>
     <div class="container">
         <header>
-            <h1>Prefiro Você</h1>
+            <h1>Te amo!!!</h1>
         </header>
 
         <main>
             <div class="divPhoto">
-                <div id="slider">
+                <div id="slider"> 
                     <img class="selected" src="img/ImgFirts.jpg" alt="Primeiro viagem para Cocho D´agua.">
                     <img src="img/ImgThird.jpeg" alt="Foto do seu aniversario.">
                     <img src="img/ImgFourth.jpeg" alt="Nossa primeira fotos juntos.">
                 </div>
             </div>
-            <div class="divtext">
+            <div class="divText">
                 <p class="text">
                     "Prefiro você, cê tem tudo
                     Parte mais genial do meu mundo
