--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 <body>
     <div class="container">
         <header>
-            <h1>Te amo!!!</h1>
+            <h1>Prefiro Você</h1>
         </header>
 
         <main>
